# scrbseq

split_samples/: CMakeLists.txt  FastQ.cpp  FastQ.hpp  io.cpp  io.hpp  split_fq.cpp  split_fq_paired.cpp  split_sam.cpp
utils/: extract-alignments.sh
